[tool.poetry]
name = "ssorepeat"
version = "0.1.0"
description = ""
authors = ["Sylvain Bougerel <sylvain.bougerel.devel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
botocore = "^1.29.135"
boto3 = "^1.26.135"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
mypy = "^1.3.0"
types-botocore = "^1.0.2"
types-boto3 = "^1.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ssorepeat = "ssorepeat.cli:run"
